# reach-testbed

./: .gitignore  BENCHMARK-DESIGN.md  HOW_TO_RUN.md  LICENSE  README.md  SIGNAL-INVENTORY.md  VALIDATION.md  conftest.py  generate-demo-stats.sh  json  package-lock.json  pytest.ini  run-tests.sh  test_shai_hulud_sandbox.py  testbed.json  validate.py
ai-security-test/: README.md
axios-dropper-simulation/: index.js  package.json
cve-group-tests/: cve_groups.py  requirements.txt
django-app/: manage.py  requirements.txt
dlp-tests/: dlp_edge_cases.py  dlp_extended_pii.py  dlp_extended_true_positives.py  dlp_false_positives.py  dlp_taint_flows.py  dlp_true_positives.py  dlp_true_positives_js.js
docs/: ACCURACY_REPORT.md  FRAMEWORK-COVERAGE-GAPS.md  accuracy-baseline.json  accuracy-v2-with-ai.json  accuracy-v3-full-coverage.json  accuracy-v4-repo-mined.json  manifest.json
echo-app/: go.mod  main.go
expected-results/: ai-garak-corpus-expected.json  ai-security-expected.json  full-scan-v5.1.3.json  go-app.json  invalid-encoding-test.json  java-callgraph-test.json  java-maven.json  javascript-app.json  noisy-enterprise-app.json  npm-callgraph-test.json  osv-enrichment-test.json  python-app.json  signal-matrix.json
fastapi-app/: main.py  requirements.txt
fastify-app/: package-lock.json  package.json  server.js
gin-app/: go.mod  go.sum  main.go
go-app/: admin_handlers.go  go.mod  main.go
grc-tests/: README.md  gdpr_tests.py  gdpr_violations.py  hipaa_tests.py  hipaa_violations.py  nist_fedramp_cmmc_tests.py  (+4 more)
rust-app/: Cargo.toml
rust-app/src/: main.rs
(+680 files in other folders)
